--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/lumen-framework": "5.8.*",
         "league/flysystem": " ~1.0",
+        "predis/predis": "^1.1",
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
